alignment fix

--- a/styles/ContactForm.module.css
+++ b/styles/ContactForm.module.css
@@ -1,7 +1,8 @@
 .page__wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-around;
+  align-items: baseline;
   width: 100%;
   min-height: calc(100vh - 55px);
   text-align: center;
